// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generate map for > project with external links in toc 1`] = `
"{
	"files": [
		"ru/",
		"ru/folder1/a1",
		"ru/folder1/folder2/a1",
		"ru/plugins/",
		"ru/project/",
		"ru/settings"
	]
}"
`;

exports[`Generate map for > project with external links in toc 2`] = `
{
  "fileTrie": {
    "tocMapping": {
      "a": "ru/toc.yaml",
    },
    "trie": {
      "ru": {
        "children": {
          "folder1": {
            "children": {
              "a1": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
              "folder2": {
                "children": {
                  "a1": {
                    "file": {
                      "ext": ".md",
                      "toc": "a",
                    },
                  },
                },
              },
            },
          },
          "index": {
            "file": {
              "ext": ".md",
              "toc": "a",
            },
          },
          "plugins": {
            "children": {
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
            },
          },
          "project": {
            "children": {
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
            },
          },
          "settings": {
            "file": {
              "ext": ".md",
              "toc": "a",
            },
          },
        },
      },
    },
  },
  "redirects": {},
  "yfmConfig": {},
}
`;

exports[`Generate map for > project with multiple language 1`] = `
"{
	"files": [
		"en/",
		"en/plugins/",
		"en/plugins/import",
		"en/project/",
		"en/project/config",
		"en/settings",
		"ru/",
		"ru/plugins/",
		"ru/plugins/import",
		"ru/project/",
		"ru/project/config",
		"ru/settings"
	]
}"
`;

exports[`Generate map for > project with multiple language 2`] = `
{
  "fileTrie": {
    "tocMapping": {
      "a": "en/toc.yaml",
      "b": "ru/toc.yaml",
    },
    "trie": {
      "en": {
        "children": {
          "index": {
            "file": {
              "ext": ".md",
              "toc": "a",
            },
          },
          "plugins": {
            "children": {
              "import": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
            },
          },
          "project": {
            "children": {
              "config": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
            },
          },
          "settings": {
            "file": {
              "ext": ".md",
              "toc": "a",
            },
          },
        },
      },
      "ru": {
        "children": {
          "index": {
            "file": {
              "ext": ".md",
              "toc": "b",
            },
          },
          "plugins": {
            "children": {
              "import": {
                "file": {
                  "ext": ".md",
                  "toc": "b",
                },
              },
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "b",
                },
              },
            },
          },
          "project": {
            "children": {
              "config": {
                "file": {
                  "ext": ".md",
                  "toc": "b",
                },
              },
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "b",
                },
              },
            },
          },
          "settings": {
            "file": {
              "ext": ".md",
              "toc": "b",
            },
          },
        },
      },
    },
  },
  "redirects": {},
  "yfmConfig": {},
}
`;

exports[`Generate map for > project with single language and toc include - only md2html 1`] = `
"{
	"files": [
		"ru/",
		"ru/folder1/a1",
		"ru/folder1/folder2/a1",
		"ru/plugins/",
		"ru/plugins/import",
		"ru/project/",
		"ru/project/config",
		"ru/settings"
	]
}"
`;

exports[`Generate map for > project with single language and toc include - only md2html 2`] = `
{
  "fileTrie": {
    "tocMapping": {
      "a": "ru/toc.yaml",
    },
    "trie": {
      "ru": {
        "children": {
          "folder1": {
            "children": {
              "a1": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
              "folder2": {
                "children": {
                  "a1": {
                    "file": {
                      "ext": ".md",
                      "toc": "a",
                    },
                  },
                },
              },
            },
          },
          "index": {
            "file": {
              "ext": ".md",
              "toc": "a",
            },
          },
          "plugins": {
            "children": {
              "import": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
            },
          },
          "project": {
            "children": {
              "config": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
            },
          },
          "settings": {
            "file": {
              "ext": ".md",
              "toc": "a",
            },
          },
        },
      },
    },
  },
  "redirects": {},
  "yfmConfig": {},
}
`;

exports[`Generate map for > project with single language and toc include 1`] = `
"{
	"files": [
		"ru/",
		"ru/folder1/a1",
		"ru/folder1/folder2/a1",
		"ru/plugins/",
		"ru/plugins/import",
		"ru/project/",
		"ru/project/config",
		"ru/settings"
	]
}"
`;

exports[`Generate map for > project with single language and toc include 2`] = `
{
  "fileTrie": {
    "tocMapping": {
      "a": "ru/toc.yaml",
    },
    "trie": {
      "ru": {
        "children": {
          "folder1": {
            "children": {
              "a1": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
              "folder2": {
                "children": {
                  "a1": {
                    "file": {
                      "ext": ".md",
                      "toc": "a",
                    },
                  },
                },
              },
            },
          },
          "index": {
            "file": {
              "ext": ".md",
              "toc": "a",
            },
          },
          "plugins": {
            "children": {
              "import": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
            },
          },
          "project": {
            "children": {
              "config": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
              "index": {
                "file": {
                  "ext": ".md",
                  "toc": "a",
                },
              },
            },
          },
          "settings": {
            "file": {
              "ext": ".md",
              "toc": "a",
            },
          },
        },
      },
    },
  },
  "redirects": {},
  "yfmConfig": {},
}
`;
